--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^1.2.0",
-    "koa-router": "^5.4.0",
+    "koa-router": "3.2.3",
     "koa-static": "^2.0.0",
     "koa-views": "^4.1.0"
   }
